// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when there are two hotbars renders w/o errors 1`] = `
<div>
  <div
    class="Select theme-dark css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-switch-to-hotbar-input-live-region"
    >
      <span
        id="aria-selection"
      >
        option , selected.
      </span>
      <span
        id="aria-context"
      >
         5 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="Select__control Select__control--is-focused Select__control--menu-is-open css-t3ipsp-control"
    >
      <div
        class="Select__value-container css-hlgwow"
      >
        <div
          class="Select__placeholder css-1jqq78o-placeholder"
          id="react-select-switch-to-hotbar-input-placeholder"
        >
          Switch to hotbar
        </div>
        <div
          class="Select__input-container css-19bb58m"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-switch-to-hotbar-input-listbox"
            aria-describedby="react-select-switch-to-hotbar-input-placeholder"
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="react-select-switch-to-hotbar-input-listbox"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="Select__input"
            id="switch-to-hotbar-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="Select__indicators css-1wy0on6"
      />
    </div>
    <div
      class="theme-dark switch-to-hotbar-input-options Select__menu css-1nmdiq5-menu"
      id="react-select-switch-to-hotbar-input-listbox"
    >
      <div
        class="Select__menu-list css-qr46ko"
      >
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-0"
          tabindex="-1"
        >
          1: default
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-1"
          tabindex="-1"
        >
          2: non-default
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-2"
          tabindex="-1"
        >
          Add hotbar ...
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-3"
          tabindex="-1"
        >
          Remove hotbar ...
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-4"
          tabindex="-1"
        >
          Rename hotbar ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`when there is one hotbar renders w/o errors 1`] = `
<div>
  <div
    class="Select theme-dark css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-switch-to-hotbar-input-live-region"
    >
      <span
        id="aria-selection"
      >
        option , selected.
      </span>
      <span
        id="aria-context"
      >
         3 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="Select__control Select__control--is-focused Select__control--menu-is-open css-t3ipsp-control"
    >
      <div
        class="Select__value-container css-hlgwow"
      >
        <div
          class="Select__placeholder css-1jqq78o-placeholder"
          id="react-select-switch-to-hotbar-input-placeholder"
        >
          Switch to hotbar
        </div>
        <div
          class="Select__input-container css-19bb58m"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-switch-to-hotbar-input-listbox"
            aria-describedby="react-select-switch-to-hotbar-input-placeholder"
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="react-select-switch-to-hotbar-input-listbox"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="Select__input"
            id="switch-to-hotbar-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="Select__indicators css-1wy0on6"
      />
    </div>
    <div
      class="theme-dark switch-to-hotbar-input-options Select__menu css-1nmdiq5-menu"
      id="react-select-switch-to-hotbar-input-listbox"
    >
      <div
        class="Select__menu-list css-qr46ko"
      >
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-0"
          tabindex="-1"
        >
          1: default
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-1"
          tabindex="-1"
        >
          Add hotbar ...
        </div>
        <div
          aria-disabled="false"
          class="Select__option css-10wo9uf-option"
          id="react-select-switch-to-hotbar-input-option-2"
          tabindex="-1"
        >
          Rename hotbar ...
        </div>
      </div>
    </div>
  </div>
</div>
`;
